--- a/anchor/Anchor.toml
+++ b/anchor/Anchor.toml
@@ -6,7 +6,7 @@ resolution = true
 skip-lint = false
 
 [programs.localnet]
-basic = "6z68wfurCMYkZG51s1Et9BJEd9nJGUusjHXNt4dGbNNF"
+crud = "2m5hHVk1XhKRE3nia6r2xGHiAjMxYN7TVda68iieXv5b"
 
 [registry]
 url = "https://api.apr.dev"
